[tool.poetry]
name = "micropython-esp32-um_tinypico-stubs"
version = "1.19.1.post3"
description = "MicroPython stubs"
authors = [
    "josverl <josverl@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "uasyncio" },
    { include = "umqtt" },
    { include = "_boot.pyi" },
    { include = "_onewire.pyi" },
    { include = "_thread.pyi" },
    { include = "_uasyncio.pyi" },
    { include = "apa106.pyi" },
    { include = "array.pyi" },
    { include = "binascii.pyi" },
    { include = "btree.pyi" },
    { include = "cmath.pyi" },
    { include = "dht.pyi" },
    { include = "dotstar.pyi" },
    { include = "ds18x20.pyi" },
    { include = "errno.pyi" },
    { include = "esp.pyi" },
    { include = "esp32.pyi" },
    { include = "ffi.pyi" },
    { include = "flashbdev.pyi" },
    { include = "framebuf.pyi" },
    { include = "gc.pyi" },
    { include = "hashlib.pyi" },
    { include = "heapq.pyi" },
    { include = "inisetup.pyi" },
    { include = "json.pyi" },
    { include = "machine.pyi" },
    { include = "math.pyi" },
    { include = "micropython.pyi" },
    { include = "neopixel.pyi" },
    { include = "network.pyi" },
    { include = "ntptime.pyi" },
    { include = "onewire.pyi" },
    { include = "os.pyi" },
    { include = "platform.pyi" },
    { include = "pycopy.pyi" },
    { include = "random.pyi" },
    { include = "select.pyi" },
    { include = "socket.pyi" },
    { include = "ssl.pyi" },
    { include = "struct.pyi" },
    { include = "sys.pyi" },
    { include = "time.pyi" },
    { include = "tinypico.pyi" },
    { include = "uarray.pyi" },
    { include = "ubinascii.pyi" },
    { include = "ubluetooth.pyi" },
    { include = "ucollections.pyi" },
    { include = "ucryptolib.pyi" },
    { include = "uctypes.pyi" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.pyi" },
    { include = "uheapq.pyi" },
    { include = "uio.pyi" },
    { include = "ujson.pyi" },
    { include = "ulogging.pyi" },
    { include = "umachine.pyi" },
    { include = "uos.pyi" },
    { include = "upip.pyi" },
    { include = "upip_utarfile.pyi" },
    { include = "uplatform.pyi" },
    { include = "urandom.pyi" },
    { include = "ure.pyi" },
    { include = "urequests.pyi" },
    { include = "uselect.pyi" },
    { include = "usocket.pyi" },
    { include = "ussl.pyi" },
    { include = "ustruct.pyi" },
    { include = "usys.pyi" },
    { include = "utime.pyi" },
    { include = "utimeq.pyi" },
    { include = "utokenize.pyi" },
    { include = "uwebsocket.pyi" },
    { include = "uzlib.pyi" },
    { include = "webrepl.pyi" },
    { include = "webrepl_setup.pyi" },
    { include = "websocket.pyi" },
    { include = "websocket_helper.pyi" },
    { include = "zlib.pyi" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
