[tool.poetry]
name = "micropython-rp2-stubs"
version = "1.19.1.post8"
description = "MicroPython stubs"
authors = [
    "josverl <josverl@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "_boot.pyi" },
    { include = "_boot_fat.pyi" },
    { include = "_onewire.pyi" },
    { include = "_rp2.pyi" },
    { include = "_thread.pyi" },
    { include = "_uasyncio.pyi" },
    { include = "aioble/__init__.pyi" },
    { include = "aioble/central.pyi" },
    { include = "aioble/client.pyi" },
    { include = "aioble/core.pyi" },
    { include = "aioble/device.pyi" },
    { include = "aioble/l2cap.pyi" },
    { include = "aioble/peripheral.pyi" },
    { include = "aioble/server.pyi" },
    { include = "array.pyi" },
    { include = "binascii.pyi" },
    { include = "cmath.pyi" },
    { include = "dht.pyi" },
    { include = "ds18x20.pyi" },
    { include = "errno.pyi" },
    { include = "framebuf.pyi" },
    { include = "gc.pyi" },
    { include = "hashlib.pyi" },
    { include = "heapq.pyi" },
    { include = "json.pyi" },
    { include = "lsm6dsox.pyi" },
    { include = "machine.pyi" },
    { include = "math.pyi" },
    { include = "micropython.pyi" },
    { include = "neopixel.pyi" },
    { include = "network.pyi" },
    { include = "onewire.pyi" },
    { include = "os.pyi" },
    { include = "random.pyi" },
    { include = "rp2.pyi" },
    { include = "select.pyi" },
    { include = "socket.pyi" },
    { include = "struct.pyi" },
    { include = "sys.pyi" },
    { include = "time.pyi" },
    { include = "uarray.pyi" },
    { include = "uasyncio/__init__.pyi" },
    { include = "uasyncio/core.pyi" },
    { include = "uasyncio/event.pyi" },
    { include = "uasyncio/funcs.pyi" },
    { include = "uasyncio/lock.pyi" },
    { include = "uasyncio/stream.pyi" },
    { include = "uasyncio/task.pyi" },
    { include = "ubinascii.pyi" },
    { include = "ubluetooth.pyi" },
    { include = "ucollections.pyi" },
    { include = "ucryptolib.pyi" },
    { include = "uctypes.pyi" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.pyi" },
    { include = "uheapq.pyi" },
    { include = "uio.pyi" },
    { include = "ujson.pyi" },
    { include = "umachine.pyi" },
    { include = "uos.pyi" },
    { include = "urandom.pyi" },
    { include = "ure.pyi" },
    { include = "uselect.pyi" },
    { include = "usocket.pyi" },
    { include = "ustruct.pyi" },
    { include = "usys.pyi" },
    { include = "utime.pyi" },
    { include = "uwebsocket.pyi" },
    { include = "uzlib.pyi" },
    { include = "websocket.pyi" },
    { include = "websocket_helper.pyi" },
    { include = "zlib.pyi" },
]

[tool.poetry.dependencies]
python = "^3.8"
micropython-stdlib-stubs = ">=0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
