[tool.poetry]
name = "micropython-stm32-stubs"
version = "1.19.1.post1"
description = "MicroPython stubs"
authors = [
    "josverl <josverl@users.noreply.github.com>",
]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "uasyncio" },
    { include = "array.py" },
    { include = "array.pyi" },
    { include = "binascii.py" },
    { include = "binascii.pyi" },
    { include = "cmath.py" },
    { include = "cmath.pyi" },
    { include = "dht.py" },
    { include = "dht.pyi" },
    { include = "errno.py" },
    { include = "errno.pyi" },
    { include = "ffi.py" },
    { include = "ffi.pyi" },
    { include = "framebuf.py" },
    { include = "framebuf.pyi" },
    { include = "gc.py" },
    { include = "gc.pyi" },
    { include = "hashlib.py" },
    { include = "hashlib.pyi" },
    { include = "heapq.py" },
    { include = "heapq.pyi" },
    { include = "json.py" },
    { include = "json.pyi" },
    { include = "lcd160cr.py" },
    { include = "lcd160cr.pyi" },
    { include = "lcd160cr_test.py" },
    { include = "lcd160cr_test.pyi" },
    { include = "logging.py" },
    { include = "logging.pyi" },
    { include = "machine.py" },
    { include = "machine.pyi" },
    { include = "math.py" },
    { include = "math.pyi" },
    { include = "micropython.py" },
    { include = "micropython.pyi" },
    { include = "network.py" },
    { include = "network.pyi" },
    { include = "onewire.py" },
    { include = "onewire.pyi" },
    { include = "os.py" },
    { include = "os.pyi" },
    { include = "platform.py" },
    { include = "platform.pyi" },
    { include = "pyb.py" },
    { include = "pyb.pyi" },
    { include = "pycopy.py" },
    { include = "pycopy.pyi" },
    { include = "pycopy_imphook.py" },
    { include = "pycopy_imphook.pyi" },
    { include = "random.py" },
    { include = "random.pyi" },
    { include = "select.py" },
    { include = "select.pyi" },
    { include = "socket.py" },
    { include = "socket.pyi" },
    { include = "stm.py" },
    { include = "stm.pyi" },
    { include = "struct.py" },
    { include = "struct.pyi" },
    { include = "sys.py" },
    { include = "sys.pyi" },
    { include = "time.py" },
    { include = "time.pyi" },
    { include = "uarray.py" },
    { include = "uarray.pyi" },
    { include = "ubinascii.py" },
    { include = "ubinascii.pyi" },
    { include = "ucollections.py" },
    { include = "ucollections.pyi" },
    { include = "uctypes.py" },
    { include = "uctypes.pyi" },
    { include = "uerrno.py" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.py" },
    { include = "uhashlib.pyi" },
    { include = "uheapq.py" },
    { include = "uheapq.pyi" },
    { include = "uio.py" },
    { include = "uio.pyi" },
    { include = "ujson.py" },
    { include = "ujson.pyi" },
    { include = "ulogging.py" },
    { include = "ulogging.pyi" },
    { include = "umachine.py" },
    { include = "umachine.pyi" },
    { include = "uos.py" },
    { include = "uos.pyi" },
    { include = "uplatform.py" },
    { include = "uplatform.pyi" },
    { include = "urandom.py" },
    { include = "urandom.pyi" },
    { include = "ure.py" },
    { include = "ure.pyi" },
    { include = "uselect.py" },
    { include = "uselect.pyi" },
    { include = "usocket.py" },
    { include = "usocket.pyi" },
    { include = "ussl.py" },
    { include = "ussl.pyi" },
    { include = "ustruct.py" },
    { include = "ustruct.pyi" },
    { include = "usys.py" },
    { include = "usys.pyi" },
    { include = "utime.py" },
    { include = "utime.pyi" },
    { include = "utimeq.py" },
    { include = "utimeq.pyi" },
    { include = "utokenize.py" },
    { include = "utokenize.pyi" },
    { include = "uzlib.py" },
    { include = "uzlib.pyi" },
    { include = "zlib.py" },
    { include = "zlib.pyi" },
    { include = "_onewire.py" },
    { include = "_onewire.pyi" },
    { include = "_uasyncio.py" },
    { include = "_uasyncio.pyi" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
