[tool.poetry]
name = "micropython-samd-seeed_wio_terminal-stubs"
version = "1.20.0.post1"
description = "MicroPython stubs"
authors = [
    "josverl <josverl@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Build Tools",
]
packages = [
    { include = "_boot.pyi" },
    { include = "_onewire.pyi" },
    { include = "_uasyncio.pyi" },
    { include = "array.pyi" },
    { include = "binascii.pyi" },
    { include = "collections.pyi" },
    { include = "dht.pyi" },
    { include = "ds18x20.pyi" },
    { include = "errno.pyi" },
    { include = "framebuf.pyi" },
    { include = "gc.pyi" },
    { include = "hashlib.pyi" },
    { include = "heapq.pyi" },
    { include = "io.pyi" },
    { include = "json.pyi" },
    { include = "logging.pyi" },
    { include = "machine.pyi" },
    { include = "math.pyi" },
    { include = "micropython.pyi" },
    { include = "onewire.pyi" },
    { include = "os.pyi" },
    { include = "random.pyi" },
    { include = "samd.pyi" },
    { include = "select.pyi" },
    { include = "struct.pyi" },
    { include = "sys.pyi" },
    { include = "time.pyi" },
    { include = "uarray.pyi" },
    { include = "uasyncio/__init__.pyi" },
    { include = "uasyncio/core.pyi" },
    { include = "uasyncio/event.pyi" },
    { include = "uasyncio/funcs.pyi" },
    { include = "uasyncio/lock.pyi" },
    { include = "uasyncio/stream.pyi" },
    { include = "uasyncio/task.pyi" },
    { include = "ubinascii.pyi" },
    { include = "ucollections.pyi" },
    { include = "uctypes.pyi" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.pyi" },
    { include = "uheapq.pyi" },
    { include = "uio.pyi" },
    { include = "ujson.pyi" },
    { include = "umachine.pyi" },
    { include = "uos.pyi" },
    { include = "urandom.pyi" },
    { include = "ure.pyi" },
    { include = "uselect.pyi" },
    { include = "ustruct.pyi" },
    { include = "usys.pyi" },
    { include = "utime.pyi" },
    { include = "uzlib.pyi" },
    { include = "zlib.pyi" },
]

[tool.poetry.dependencies]
python = "^3.8"
micropython-stdlib-stubs = ">=0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
