[tool.poetry]
name = "micropython-webassembly-stubs"
version = "1.21.0.post1"
description = "MicroPython stubs"
authors = [
    "josverl <josverl@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Stubs Only",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
    "Natural Language :: English",
]
packages = [
    { include = "__builtins__.pyi" },
    { include = "_asyncio.pyi" },
    { include = "array.pyi" },
    { include = "binascii.pyi" },
    { include = "cmath.pyi" },
    { include = "collections.pyi" },
    { include = "deflate.pyi" },
    { include = "errno.pyi" },
    { include = "framebuf.pyi" },
    { include = "gc.pyi" },
    { include = "hashlib.pyi" },
    { include = "heapq.pyi" },
    { include = "io.pyi" },
    { include = "json.pyi" },
    { include = "logging.pyi" },
    { include = "math.pyi" },
    { include = "micropython.pyi" },
    { include = "os.pyi" },
    { include = "platform.pyi" },
    { include = "random.pyi" },
    { include = "select.pyi" },
    { include = "struct.pyi" },
    { include = "sys.pyi" },
    { include = "time.pyi" },
    { include = "uarray.pyi" },
    { include = "ubinascii.pyi" },
    { include = "ucollections.pyi" },
    { include = "uctypes.pyi" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.pyi" },
    { include = "uheapq.pyi" },
    { include = "uio.pyi" },
    { include = "ujson.pyi" },
    { include = "uos.pyi" },
    { include = "uplatform.pyi" },
    { include = "urandom.pyi" },
    { include = "ure.pyi" },
    { include = "uselect.pyi" },
    { include = "ustruct.pyi" },
    { include = "usys.pyi" },
    { include = "utime.pyi" },
]

[tool.poetry.dependencies]
python = "^3.8"
micropython-stdlib-stubs = ">=0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
